--- a/src/main/resources/templates/admin/produce/plan.html
+++ b/src/main/resources/templates/admin/produce/plan.html
@@ -102,8 +102,8 @@
                 <label class="layui-form-label">生产线</label>
                 <div class="layui-input-block">
                     <div class="layui-row">
-                        <div class="layui-col-xs2" ng-repeat="p in line">
-                            <input type="radio" name="line" ng-value="p" ng-model="model.line"><span ng-bind="p"></span>
+                        <div class="layui-col-xs2" ng-repeat="d in line">
+                            <input type="radio" name="line" ng-value="d" ng-model="model.line"><span ng-bind="d"></span>
                         </div>
                     </div>
                 </div>
