--- a/src/main/resources/templates/admin/index.html
+++ b/src/main/resources/templates/admin/index.html
@@ -64,9 +64,9 @@
         <!-- 底部固定区域 -->
         © 航天科技小程序后台管理
     </div>
-    <script type="text/javascript" src="/plugin/jquery/jquery.js"></script>
-    <script type="text/javascript" src="/plugin/angularjs/angular.js"></script>
-    <script type="text/javascript" src="/plugin/angularjs/angular-route.js"></script>
+    <script type="text/javascript" src="/plugin/jquery/jquery.min.js"></script>
+    <script type="text/javascript" src="/plugin/angularjs/angular.min.js"></script>
+    <script type="text/javascript" src="/plugin/angularjs/angular-route.min.js"></script>
     <script type="text/javascript" src="/plugin/layui/layui.all.js"></script>
     <script type="text/javascript" src="/plugin/util/util.js"></script>
     <script type="text/javascript" src="/js/admin.js"></script>
