--- a/src/main/resources/templates/admin/produce/boardplan.html
+++ b/src/main/resources/templates/admin/produce/boardplan.html
@@ -21,13 +21,10 @@
             <th>产品型号</th>
             <th>产品令号</th>
             <th>产品批次</th>
-            <th>生产线</th>
-            <th>贴片卡号</th>
+            <th>生产班组</th>
             <th>计划数量</th>
             <th>生产时间</th>
             <th>完成时间</th>
-            <th>加时(h)</th>
-            <th>小时能力(个)</th>
             <th>结转数量</th>
             <th>结转信息</th>
             <th>计划创建时间</th>
@@ -44,22 +41,17 @@
                 <span ng-if="d.step==0">计划未下发</span>
                 <span ng-if="d.step==1">开票领料</span>
                 <span style="color:red;" ng-if="d.step==10">开票领料(停滞)</span>
-                <span ng-if="d.step==2">备件备产</span>
-                <span style="color:red;" ng-if="d.step==20">备件备产(停滞)</span>
-                <span ng-if="d.step==3">生产准备就绪</span>
-                <span ng-if="d.step==4">生产进行中</span>
-                <span ng-if="d.step==5">生产完成</span>
+                <span ng-if="d.step==2">生产准备就绪</span>
+                <span ng-if="d.step==3">生产进行中</span>
+                <span ng-if="d.step==4">生产完成</span>
             </td>
             <td ng-bind="d.model"></td>
             <td ng-bind="d.order"></td>
             <td ng-bind="d.batch"></td>
-            <td ng-bind="d.line"></td>
-            <td ng-bind="d.card"></td>
+            <td ng-bind="d.team"></td>
             <td ng-bind="d.count_plan"></td>
             <td ng-bind="d.time_start|date:'yyyy-MM-dd HH:mm:ss'"></td>
             <td ng-bind="d.time_end|date:'yyyy-MM-dd HH:mm:ss'"></td>
-            <td ng-bind="d.extra_hour"></td>
-            <td ng-bind="d.speed"></td>
             <td ng-bind="d.count_finish"></td>
             <td ng-bind="d.mark_finish"></td>
             <td ng-bind="d.systime|date:'yyyy-MM-dd HH:mm:ss'"></td>
@@ -81,6 +73,22 @@
     <div id="modal" class="modal">
         <form>
             <div class="layui-form-item">
+                <label class="layui-form-label">创建类型</label>
+                <div class="layui-input-block">
+                    <div class="layui-row">
+                        <div class="layui-col-xs3" ng-repeat="d in addTypeOption">
+                            <input type="radio" name="addType" ng-value="d.id" ng-model="model.type"><span ng-bind="d.name"></span>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="layui-form-item" ng-if="model.type==1">
+                <label class="layui-form-label">贴片计划</label>
+                <div class="layui-input-block">
+                    <select class="layui-input" ng-options="x.id as x.model+' , '+x.order+' , '+x.batch for x in patchPlan" ng-model="model.plan_id"></select>
+                </div>
+            </div>
+            <div class="layui-form-item">
                 <label class="layui-form-label">产品型号</label>
                 <div class="layui-input-block">
                     <input type="text" class="layui-input" style="text-transform:uppercase;" ng-model="model.model" ng-disabled="model.id!=null">
@@ -99,11 +107,11 @@
                 </div>
             </div>
             <div class="layui-form-item">
-                <label class="layui-form-label">生产线</label>
+                <label class="layui-form-label">生产班组</label>
                 <div class="layui-input-block">
                     <div class="layui-row">
-                        <div class="layui-col-xs2" ng-repeat="d in line">
-                            <input type="radio" name="line" ng-value="d" ng-model="model.line"><span ng-bind="d"></span>
+                        <div class="layui-col-xs2" ng-repeat="d in team">
+                            <input type="checkbox" name="team" ng-model="d.select"><span ng-bind="d.name"></span>
                         </div>
                     </div>
                 </div>
@@ -185,10 +193,8 @@
                         <span class="layui-badge layui-bg-green" ng-if="d.step==1">计划下发&nbsp;&gt;&nbsp;开票领料</span>
                         <span class="layui-badge" ng-if="d.step==10">开票领料(停滞)</span>
                         <span class="layui-badge layui-bg-green" ng-if="d.step==2">开票领料(完成)&nbsp;&gt;&nbsp;备件备产</span>
-                        <span class="layui-badge" ng-if="d.step==20">备件备产(停滞)</span>
-                        <span class="layui-badge layui-bg-green" ng-if="d.step==3">备件备产(完成)&nbsp;&gt;&nbsp;生产准备就绪</span>
-                        <span class="layui-badge layui-bg-green" ng-if="d.step==4">生产准备就绪(完成)&nbsp;&gt;&nbsp;生产进行中</span>
-                        <span class="layui-badge layui-bg-green" ng-if="d.step==5">生产完成</span>
+                        <span class="layui-badge layui-bg-green" ng-if="d.step==3">生产准备就绪(完成)&nbsp;&gt;&nbsp;生产进行中</span>
+                        <span class="layui-badge layui-bg-green" ng-if="d.step==4">生产完成</span>
                         <span ng-bind="d.systime|date:'yyyy-MM-dd HH:mm:ss'"></span>
                     </h4>
                     <p ng-bind="d.message"></p>
