--- a/src/main/resources/templates/admin/produce/boardplan.html
+++ b/src/main/resources/templates/admin/produce/boardplan.html
@@ -48,10 +48,10 @@
             <td ng-bind="d.model"></td>
             <td ng-bind="d.order"></td>
             <td ng-bind="d.batch"></td>
-            <td ng-bind="d.team"></td>
+            <td ng-bind="d.team.toString().split('').join(',')"></td>
             <td ng-bind="d.count_plan"></td>
-            <td ng-bind="d.time_start|date:'yyyy-MM-dd HH:mm:ss'"></td>
-            <td ng-bind="d.time_end|date:'yyyy-MM-dd HH:mm:ss'"></td>
+            <td ng-bind="d.time_start|date:'yyyy-MM-dd'"></td>
+            <td ng-bind="d.time_end|date:'yyyy-MM-dd'"></td>
             <td ng-bind="d.count_finish"></td>
             <td ng-bind="d.mark_finish"></td>
             <td ng-bind="d.systime|date:'yyyy-MM-dd HH:mm:ss'"></td>
@@ -60,7 +60,7 @@
                 <button class="layui-btn layui-btn-xs" ng-if="d.step==0" ng-click="showEditModal(d)">修改</button>
                 <button class="layui-btn layui-btn-xs" ng-if="d.step==0" ng-click="delete(d)">删除</button>
                 <!--<button class="layui-btn layui-btn-xs" ng-if="d.step==0||d.step==3" ng-click="showEditStepModal(d)">流转</button>-->
-                <button class="layui-btn layui-btn-xs" ng-if="d.step==0||d.step==1||d.step==10||d.step==2||d.step==20||d.step==3" ng-click="showEditStepModal(d)">流转</button>
+                <button class="layui-btn layui-btn-xs" ng-if="d.step==0||d.step==1||d.step==10||d.step==2" ng-click="showEditStepModal(d)">流转</button>
                 <button class="layui-btn layui-btn-xs" ng-if="d.step==4" ng-click="showFinishModal(d)">结转</button>
                 <button class="layui-btn layui-btn-xs" ng-click="showStepModal(d)">进度</button>
             </td>
@@ -77,7 +77,7 @@
                 <div class="layui-input-block">
                     <div class="layui-row">
                         <div class="layui-col-xs3" ng-repeat="d in addTypeOption">
-                            <input type="radio" name="addType" ng-value="d.id" ng-model="model.type"><span ng-bind="d.name"></span>
+                            <input type="radio" name="addType" ng-value="d.id" ng-model="model.type" ng-disabled="model.id!=null"><span ng-bind="d.name"></span>
                         </div>
                     </div>
                 </div>
@@ -85,25 +85,25 @@
             <div class="layui-form-item" ng-if="model.type==1">
                 <label class="layui-form-label">贴片计划</label>
                 <div class="layui-input-block">
-                    <select class="layui-input" ng-options="x.id as x.model+' , '+x.order+' , '+x.batch for x in patchPlan" ng-model="model.plan_id"></select>
+                    <select class="layui-input" ng-options="x.id as x.model+' , '+x.order+' , '+x.batch for x in patchPlan" ng-model="model.plan_id" ng-disabled="model.id!=null"></select>
                 </div>
             </div>
             <div class="layui-form-item">
                 <label class="layui-form-label">产品型号</label>
                 <div class="layui-input-block">
-                    <input type="text" class="layui-input" style="text-transform:uppercase;" ng-model="model.model" ng-disabled="model.id!=null">
+                    <input type="text" class="layui-input" style="text-transform:uppercase;" ng-model="model.model" ng-disabled="model.id!=null||model.type==1">
                 </div>
             </div>
             <div class="layui-form-item">
                 <label class="layui-form-label">产品令号</label>
                 <div class="layui-input-block">
-                    <input type="text" class="layui-input" ng-model="model.order" ng-disabled="model.id!=null">
+                    <input type="text" class="layui-input" ng-model="model.order" ng-disabled="model.id!=null||model.type==1">
                 </div>
             </div>
             <div class="layui-form-item">
                 <label class="layui-form-label">产品批次</label>
                 <div class="layui-input-block">
-                    <input type="text" class="layui-input" ng-model="model.batch" ng-disabled="model.id!=null">
+                    <input type="text" class="layui-input" ng-model="model.batch" ng-disabled="model.id!=null||model.type==1">
                 </div>
             </div>
             <div class="layui-form-item">
@@ -153,7 +153,7 @@
             <div class="layui-form-item">
                 <div class="layui-input-block">
                     <button class="layui-btn" ng-click="editStep(true)">流转</button>
-                    <button class="layui-btn layui-btn-danger" ng-if="model.step==1||model.step==10||model.step==2||model.step==20" ng-click="editStep(false)">停滞</button>
+                    <button class="layui-btn layui-btn-danger" ng-if="model.step==1||model.step==10" ng-click="editStep(false)">停滞</button>
                 </div>
             </div>
         </form>
