--- a/src/main/resources/templates/admin/produce/boardplan.html
+++ b/src/main/resources/templates/admin/produce/boardplan.html
@@ -18,12 +18,11 @@
         <tr>
             <th>计划ID</th>
             <th>状态</th>
-            <th>产品型号</th>
-            <th>产品令号</th>
-            <th>产品批次</th>
+            <th>产品型号/令号/批次</th>
             <th>生产班组</th>
             <th>计划数量</th>
             <th>生产时间</th>
+            <th>进度</th>
             <th>完成时间</th>
             <th>结转数量</th>
             <th>结转信息</th>
@@ -45,12 +44,20 @@
                 <span ng-if="d.step==3">生产进行中</span>
                 <span ng-if="d.step==4">生产完成</span>
             </td>
-            <td ng-bind="d.model"></td>
-            <td ng-bind="d.order"></td>
-            <td ng-bind="d.batch"></td>
+            <td>
+                <div><span ng-bind="d.model"></span></div>
+                <div><span ng-bind="d.order"></span></div>
+                <div><span ng-bind="d.batch"></span></div>
+            </td>
             <td ng-bind="d.team.toString().split('').join(',')"></td>
             <td ng-bind="d.count_plan"></td>
             <td ng-bind="d.time_start|date:'yyyy-MM-dd'"></td>
+            <td>
+                <div>完成(<span ng-bind="d.count_good"></span>)</div>
+                <div>故障(<span ng-bind="d.count_bad"></span>)</div>
+                <div>总计(<span ng-bind="d.count_good+d.count_bad"></span>)</div>
+                <div style="color:red;">差额(<span ng-bind="d.count_plan-(d.count_good+d.count_bad)"></span>)</div>
+            </td>
             <td ng-bind="d.time_end|date:'yyyy-MM-dd'"></td>
             <td ng-bind="d.count_finish"></td>
             <td ng-bind="d.mark_finish"></td>
@@ -61,7 +68,8 @@
                 <button class="layui-btn layui-btn-xs" ng-if="d.step==0" ng-click="delete(d)">删除</button>
                 <!--<button class="layui-btn layui-btn-xs" ng-if="d.step==0||d.step==3" ng-click="showEditStepModal(d)">流转</button>-->
                 <button class="layui-btn layui-btn-xs" ng-if="d.step==0||d.step==1||d.step==10||d.step==2" ng-click="showEditStepModal(d)">流转</button>
-                <button class="layui-btn layui-btn-xs" ng-if="d.step==4" ng-click="showFinishModal(d)">结转</button>
+                <button class="layui-btn layui-btn-xs" ng-if="d.step==3" ng-click="showEditRecordModal(d)">日结算</button>
+                <button class="layui-btn layui-btn-xs" ng-if="d.step==3" ng-click="showFinishModal(d)">结转</button>
                 <button class="layui-btn layui-btn-xs" ng-click="showStepModal(d)">进度</button>
             </td>
         </tr>
@@ -167,7 +175,7 @@
                         <span class="layui-badge layui-bg-green" ng-if="d.step==0">计划未下发</span>
                         <span class="layui-badge layui-bg-green" ng-if="d.step==1">计划下发&nbsp;&gt;&nbsp;开票领料</span>
                         <span class="layui-badge" ng-if="d.step==10">开票领料(停滞)</span>
-                        <span class="layui-badge layui-bg-green" ng-if="d.step==2">开票领料(完成)&nbsp;&gt;&nbsp;备件备产</span>
+                        <span class="layui-badge layui-bg-green" ng-if="d.step==2">开票领料(完成)&nbsp;&gt;&nbsp;生产准备就绪</span>
                         <span class="layui-badge layui-bg-green" ng-if="d.step==3">生产准备就绪(完成)&nbsp;&gt;&nbsp;生产进行中</span>
                         <span class="layui-badge layui-bg-green" ng-if="d.step==4">生产完成</span>
                         <span ng-bind="d.systime|date:'yyyy-MM-dd HH:mm:ss'"></span>
@@ -176,6 +184,53 @@
                 </div>
             </li>
         </ul>
+    </div>
+    <div id="modal-record-edit" class="modal">
+        <form>
+            <div class="layui-form-item">
+                <label class="layui-form-label">生产班组</label>
+                <div class="layui-input-block">
+                    <div class="layui-row">
+                        <div class="layui-col-xs2" ng-repeat="d in team">
+                            <input type="radio" name="team" ng-value="d.id" ng-model="recordModel.team"><span ng-bind="d.name"></span>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="layui-form-item">
+                <label class="layui-form-label">完成数量</label>
+                <div class="layui-input-block">
+                    <input type="number" class="layui-input" ng-model="recordModel.count_good">
+                </div>
+            </div>
+            <div class="layui-form-item">
+                <label class="layui-form-label">故障数量</label>
+                <div class="layui-input-block">
+                    <input type="number" class="layui-input" ng-model="recordModel.count_bad">
+                </div>
+            </div>
+            <div class="layui-form-item">
+                <label class="layui-form-label">总数量</label>
+                <div class="layui-input-block"><span ng-bind="recordModel.count_good+recordModel.count_bad"></span></div>
+            </div>
+            <div class="layui-form-item">
+                <label class="layui-form-label">上报日期</label>
+                <div class="layui-input-block">
+                    <input id="date-record" type="text" class="layui-input">
+                </div>
+            </div>
+            <div class="layui-form-item">
+                <label class="layui-form-label">备注</label>
+                <div class="layui-input-block">
+                    <textarea class="layui-textarea" ng-model="stepModel.message"></textarea>
+                </div>
+            </div>
+            <div class="layui-form-item">
+                <div class="layui-input-block">
+                    <button class="layui-btn" ng-click="editRecord()">提交</button>
+                </div>
+            </div>
+        </form>
     </div>
     <div id="modal-finish" class="modal">
         <form>
@@ -188,7 +243,7 @@
             <div class="layui-form-item">
                 <label class="layui-form-label">结转数量</label>
                 <div class="layui-input-block">
-                    <input type="number" class="layui-input" ng-model="model.count_finish">
+                    <input type="number" class="layui-input" ng-model="model.count_finish" disabled>
                 </div>
             </div>
             <div class="layui-form-item">
