--- a/src/main/resources/templates/admin/produce/patchplan.html
+++ b/src/main/resources/templates/admin/produce/patchplan.html
@@ -18,9 +18,7 @@
         <tr>
             <th>计划ID</th>
             <th>状态</th>
-            <th>产品型号</th>
-            <th>产品令号</th>
-            <th>产品批次</th>
+            <th>产品型号/令号/批次</th>
             <th>生产线</th>
             <th>贴片卡号</th>
             <th>计划数量</th>
@@ -50,9 +48,11 @@
                 <span ng-if="d.step==4">生产进行中</span>
                 <span ng-if="d.step==5">生产完成</span>
             </td>
-            <td ng-bind="d.model"></td>
-            <td ng-bind="d.order"></td>
-            <td ng-bind="d.batch"></td>
+            <td>
+                <div><span ng-bind="d.model"></span></div>
+                <div><span ng-bind="d.order"></span></div>
+                <div><span ng-bind="d.batch"></span></div>
+            </td>
             <td ng-bind="d.line"></td>
             <td ng-bind="d.card"></td>
             <td ng-bind="d.count_plan"></td>
