--- a/src/main/resources/templates/admin/produce/boardplan.html
+++ b/src/main/resources/templates/admin/produce/boardplan.html
@@ -242,23 +242,24 @@
         </form>
     </div>
     <div id="modal-record" class="modal">
-        <ul class="layui-timeline">
-            <li class="layui-timeline-item" ng-repeat="d in planStep">
-                <i class="layui-icon layui-timeline-axis">&#xe63f;</i>
-                <div class="layui-timeline-content layui-text">
-                    <h4 class="layui-timeline-title">
-                        <span class="layui-badge layui-bg-green" ng-if="d.step==0">计划未下发</span>
-                        <span class="layui-badge layui-bg-green" ng-if="d.step==1">计划下发&nbsp;&gt;&nbsp;开票领料</span>
-                        <span class="layui-badge" ng-if="d.step==10">开票领料(停滞)</span>
-                        <span class="layui-badge layui-bg-green" ng-if="d.step==2">开票领料(完成)&nbsp;&gt;&nbsp;生产准备就绪</span>
-                        <span class="layui-badge layui-bg-green" ng-if="d.step==3">生产准备就绪(完成)&nbsp;&gt;&nbsp;生产进行中</span>
-                        <span class="layui-badge layui-bg-green" ng-if="d.step==4">生产完成</span>
-                        <span ng-bind="d.systime|date:'yyyy-MM-dd HH:mm:ss'"></span>
-                    </h4>
-                    <p ng-bind="d.message"></p>
-                </div>
-            </li>
-        </ul>
+        <table class="layui-table">
+            <thead>
+            <tr>
+                <th>日期</th>
+                <th>一班</th>
+                <th>二班</th>
+                <th>三班</th>
+            </tr>
+            </thead>
+            <tbody>
+            <tr ng-repeat="d in planRecord">
+                <td ng-bind="d.date"></td>
+                <td ng-bind="d.team1"></td>
+                <td ng-bind="d.team2"></td>
+                <td ng-bind="d.team3"></td>
+            </tr>
+            </tbody>
+        </table>
     </div>
     <div id="modal-finish" class="modal">
         <form>
